# rustotron

./: .clippy.toml  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: bus_throughput.rs
docs/: USAGE.md  protocol.md  setup.md
docs/decisions/: 001-dependencies.md  002-concurrency-model.md  003-protocol-reality.md
examples/rn-app/: App.tsx  README.md  package.json
examples/rn-app/src/: ReactotronConfig.ts
homebrew/: rustotron.rb
scripts/: e2e-tail-smoke.sh
src/: bus.rs  cli.rs  config.rs  lib.rs  main.rs
src/commands/: config.rs  mcp.rs  mod.rs  run.rs  signals.rs  tail.rs
src/mcp/: mod.rs  schema.rs  server.rs  tools.rs
src/protocol/: api_events.rs  body.rs  handshake.rs  messages.rs  mod.rs  repair.rs
src/server/: config.rs  mod.rs  session.rs
src/store/: actor.rs  config.rs  mod.rs  redact.rs  request.rs
src/tui/: app.rs  body.rs  curl.rs  event.rs  filter.rs  highlight.rs  keys.rs  mock.rs  mod.rs  mouse.rs  theme.rs
src/tui/view/: detail.rs  filter.rs  list.rs  mod.rs  modals.rs  statusbar.rs
tests/: integration_chaos.rs  integration_protocol.rs  integration_server.rs  integration_tui_snapshots.rs
tests/fixtures/reactotron-traces/: README.md  api-request-pending.ndjson  api-request-response-pair.ndjson  api-response-orphaned.ndjson  handshake-ok.ndjson  mixed-with-unknown-types.ndjson
tests/snapshots/: integration_tui_snapshots__tui_confirm_clear_modal.snap  integration_tui_snapshots__tui_detail_collapsed_request_body.snap  integration_tui_snapshots__tui_detail_truncated_body.snap  integration_tui_snapshots__tui_detail_view_focused.snap  integration_tui_snapshots__tui_empty_state.snap  integration_tui_snapshots__tui_filter_input_open.snap  integration_tui_snapshots__tui_filter_method_post_active.snap  integration_tui_snapshots__tui_filter_status_4xx_active.snap  integration_tui_snapshots__tui_list_view_mock.snap
