[package]
name = "rustotron"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal-native network inspector for React Native apps, wire-compatible with Reactotron. TUI + MCP server for AI agents."
authors = ["LEGO-SUDO <nakulksingh3127@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LEGO-SUDO/rustotron"
homepage = "https://github.com/LEGO-SUDO/rustotron"
documentation = "https://docs.rs/rustotron"
readme = "README.md"
keywords = ["react-native", "reactotron", "tui", "mcp", "networking"]
categories = ["command-line-utilities", "development-tools::debugging"]

[lib]
name = "rustotron"
path = "src/lib.rs"

[[bin]]
name = "rustotron"
path = "src/main.rs"

[dependencies]
arboard = { version = "3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories-next = "2.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.32"
memory-stats = "1.2.0"
ratatui = "0.29.0"
rmcp = { version = "=1.5.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
insta = "1.47.2"
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"

[[bench]]
name = "bus_throughput"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dist]
inherits = "release"
