[package]
name = "rustotron"
version = "0.1.0-rc.1"
edition = "2024"
rust-version = "1.85"
description = "Terminal-native network inspector for React Native apps, wire-compatible with Reactotron. TUI + MCP server for AI agents."
authors = ["LEGO-SUDO <nakulksingh3127@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LEGO-SUDO/rustotron"
homepage = "https://github.com/LEGO-SUDO/rustotron"
documentation = "https://docs.rs/rustotron"
readme = "README.md"
keywords = ["react-native", "reactotron", "tui", "mcp", "networking"]
categories = ["command-line-utilities", "development-tools::debugging"]

[lib]
name = "rustotron"
path = "src/lib.rs"

[[bin]]
name = "rustotron"
path = "src/main.rs"

[dependencies]
arboard = { version = "3", default-features = false }
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories-next = "2.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures-util = "0.3.32"
memory-stats = "1.2.0"
ratatui = "0.29.0"
rmcp = { version = "=1.5.0", features = ["server", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5.3.0"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
insta = "1.47.2"
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"

[[bench]]
name = "bus_throughput"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dist]
inherits = "release"

# Config for `cargo dist` — run `cargo dist init` after edits to
# regenerate `.github/workflows/release.yml`.
[workspace.metadata.dist]
# Pin the cargo-dist version so the generated workflow is reproducible
# until you opt in to an upgrade.
cargo-dist-version = "0.21.1"
# Host on GitHub Releases.
ci = "github"
# What users can install with.
#   `shell` — `curl … | sh` one-liner attached to every release.
#   `homebrew` — auto-updates a formula in the tap below on every tag.
#   crates.io publishing is handled separately in the release workflow
#   once you set the CARGO_REGISTRY_TOKEN secret (see README).
installers = ["shell", "homebrew"]
# Homebrew tap that cargo-dist will push a rendered formula to on every
# release. The repo MUST exist before cutting your first tag — create it
# with `gh repo create LEGO-SUDO/homebrew-rustotron --public`.
tap = "LEGO-SUDO/homebrew-rustotron"
publish-jobs = ["homebrew"]
# Per PRD NFR-17: Linux + macOS at launch, both architectures. Windows
# is post-v1. Linux gnu for glibc distros, musl for static Alpine /
# scratch containers.
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
]
# Draft the GitHub Release by default so you can review notes before
# publishing. Flip to "auto" once you trust the pipeline.
github-release = "auto"
# Build in the `dist` profile (LTO + codegen-units=1 + strip, inherits
# from release — see profile.dist above).
# Sigstore attestations on release artifacts so users can verify
# provenance via `gh attestation verify`.
github-attestations = true
# Don't re-run the full pipeline on PRs — plan mode is enough.
pr-run-mode = "plan"
# Auto-include common metadata files in tarballs so `brew install` gets
# the license text without a second request.
auto-includes = true

# cargo-dist 0.21.1 hardcodes ubuntu-20.04 for every Linux target AND
# for the global plan/host/announce/homebrew-publish jobs. GitHub
# retired the ubuntu-20.04 hosted runner in 2025, so every job ends up
# queued indefinitely. Override each slot explicitly.
[workspace.metadata.dist.github-custom-runners]
global = "ubuntu-22.04"
x86_64-unknown-linux-gnu = "ubuntu-22.04"
aarch64-unknown-linux-gnu = "ubuntu-22.04"
x86_64-unknown-linux-musl = "ubuntu-22.04"
